feat(perception): 优化阶段检测并增强QA生成器
主要改进:
- 实现阶段去抖动逻辑，禁止跳跃转换，修复Turn阶段丢失问题
- 分离VLM/LLM模型配置，统一API密钥管理
- Phase-level问题现在包含聚合的行为特征和决策时间
- 替换随机GT为规则推断 (_infer_strategy_from_actions)
- 优化VLM prompt，增加frame_type检测和一致性校验

效果: 总体准确率 33%→44%, Action-level 20%→50%

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,44 @@
-LLM_API_KEY=sk-********************
-LLM_BASE_URL=https://aihubmix.com/v1
-LLM_MODEL_NAME=gpt-4o
+# ============================================================================
+# LIMP_Poker_V3 Configuration
+# ============================================================================
 
-# 数据集与输出
-BENCHMARK_TEXTS_DIR=/abs/path/to/benchmark/texts/full_version
-BENCHMARK_QUESTIONS_DIR=/abs/path/to/benchmark/questions
-EXTRACTED_INFO_DIR=/abs/path/to/benchmark/extracted_information
+# ========== API 配置 ==========
+API_KEY=sk-********************
+API_BASE_URL=YOUR_API_URL_HERE
 
-# 语言模板与日志
-LANGUAGE_LOGS_DIR=/abs/path/to/dataset_language_large/language
-QUESTION_TYPES_JSON=/abs/path/to/dataset_language_large/language/question_types.json
-ACTIONS_POS_JSON=/abs/path/to/actions_pos.json
+# ========== 模型配置 ==========
+# VLM (视觉模型) - 用于图像分析，推荐 qwen3-vl-plus (性价比最高)
+VLM_MODEL_NAME=qwen3-vl-plus
 
-# 无语言集与视频帧
-NOLANG_EPISODES_DIR=/abs/path/to/full_dataset/nolang_episodes
-VIDEO_COLOR_DIR=/abs/path/to/video_color
-MAGICK_CONFIGURE_PATH=/abs/path/to/virtualhome/data
+# LLM (语言模型) - 用于推理和GT提取，推荐 gpt-4o-mini (速度快+便宜)
+LLM_MODEL_NAME=gpt-4o-mini
 
-# VirtualHome/Unity
-VIRTUALHOME_EXEC_FILE=/abs/path/to/linux_exec.x86_64
+# ASR (语音模型) - 用于音频转写
+ASR_MODEL_NAME=whisper-large-v3
+ASR_API_KEY=sk-********************
+ASR_BASE_URL=YOUR_ASR_URL_HERE
 
-# 训练集生成
-LANGUAGE_DATASET_PIK=/abs/path/to/dataset_language_large.pik
-TRAINING_SET_RAW_LOG_DIR=/abs/path/to/training_set/raw_log
-TRAINING_SET_DIR=/abs/path/to/training_set
-FULL_DATASET_1500_DIR=/abs/path/to/full_dataset/1500+episodes
+# ========== 协议模式 ==========
+# audience: 观众视角，双方手牌可见
+# player: 玩家视角，对手手牌隐藏
+PROTOCOL_MODE=audience
 
-# 视觉数据（实例分割）
-VISUAL_DATA_DIR=/abs/path/to/visual_data
-VIDEO_FRAMES_DIR=/abs/path/to/raw_video_frames
+# ========== 采样设置 ==========
+FPS=1
+SAMPLING_INTERVAL=1
+
+# ========== QA 生成级别 ==========
+QA_LEVELS=action,phase
+
+# ========== Agent 开关 (用于消融实验) ==========
+AGENT_BOARD=True
+AGENT_ACTION=True
+AGENT_POSTURE=True
+AGENT_EQUITY=False
+AGENT_TOM_BELIEF=True
+AGENT_TOM_SOCIAL=True
+
+# ========== 特征开关 ==========
+USE_DECISION_TIME=True
+USE_POSTURE_SEQUENCE=True
+USE_FACIAL_EMOTION=True
